# AI-powered-App-Developer

./: README.md
AI-App Developer/: main.py  pyproject.toml
AI-App Developer/agent/: graph.py  tools.py
AI-App Developer/generated_project/: app.js  index.html  style.css
