[project]
name = "coder-buddy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "openai>=1.51.0",
    "langchain-openai>=0.2.11",
    "langchain>=0.3.27",
    "langchain-core>=0.3.72",
    "tiktoken>=0.7.0",
    "langgraph>=0.6.3",
    "pip>=25.2",
    "pydantic>=2.11.7",
    "python-dotenv>=1.1.1",
    "flask>=3.1.2",
]
